完善了安全层微服务消息摘要传递的认证体系，支持一定量的并发(后期可根据需求伸缩)